Tests/Invalid/HelloTaskNamingError.tl
Location pickupItem
    name = "s1_pickup"
    type = "SmallLoadCarrier"
end

Location dropoffItem
    name = "ws1_dropoff"
    type = "SmallLoadCarrier"
end

TransportOrderStep loadStorage
    Location pickupItem
end

TransportOrderStep unloadWorkstation1
    Location dropoffItemm
end

task HelloTask
    Transport
    from loadStorage2
    to unloadWorkstation1
end